# orbital

./: .pre-commit-config.yaml  README.md  download_book.py  pyproject.toml
notebooks/: Two Body System.ipynb
orbital/: satelite_positioning.py  two_body_system.py
tests/: orbital_test.py
