[tool.poetry]
name = "orbital"
version = "0.1.0"
description = ""
authors = ["Ole Martin Ruud <dev@barskern.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
cvxopt = "^1.3.0"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
autoflake8 = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
